# coding_agent

./: .gitignore  LICENSE  PYPI_README.md  README.md  pyproject.toml  requirements.txt
coding_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  intent.py  mcp_client.py  mcp_server.py  ollama_client.py  session_store.py  tools.py  ui.py
